<package>
  <name>eigen_checks</name>
  <version>0.0.1</version>
  <description>Glog and Gtest check, assert, expect macros for eigen types.</description>
  <maintainer email="simon.lynen@mavt.ethz.ch">simonlynen</maintainer>

  <license>New BSD</license>

  <url type="website">https://github.com/ethz-asl/eigen_checks</url>
  <url type="bugtracker">https://github.com/ethz-asl/eigen_checks/issues</url>

  <author>Simon Lynen</author>

  <buildtool_depend>ament</buildtool_depend>

  <build_depend>eigen_vendor</build_depend>
  <build_depend>gflags_vendor</build_depend>
  <build_depend>glog_vendor</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
